--- a/static/base.css
+++ b/static/base.css
@@ -4,6 +4,7 @@ html {
 
 span {
   position: absolute;
+  margin: auto;
   top: 115px;
   left: 265px;
 }
@@ -34,7 +35,23 @@ span {
       position: relative;
       border-top: 2px solid black;
     }
+     
+    .flower:hover {
+      background-color: gray;
+    }
     
+    .flower1 {
+      margin: 55px;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100px;
+      width: 100px;
+      position: relative;
+      border-top: 2px solid black;
+    }
+
     .center {
       position: absolute;
       height: 18px;
@@ -54,10 +71,6 @@ span {
       transform: rotate(45deg);
       border: 1px solid black;
       background-color: white;
-    }
-    
-    .flower:hover {
-      background-color: gray;
     }
 
     .petals:nth-of-type(1) {
@@ -94,4 +107,26 @@ span {
     position:absolute;
     top: -25px;
     left: 2px;
+  }
+
+  .target {
+    position: relative;
+  }
+  
+  .preview {
+    background-image: url(/media/Screenshot\ \(31\).png);
+    z-index: 1000;
+    position: absolute;
+    height: 150px;
+    width: 180px;
+    top: 280px;
+    left: 500px;
+    opacity: 0;
+  }
+  
+  @media screen and (max-width: 767px) {
+    .container {
+        display: inline-block;
+        height: 100%;
+    }
   }
