--- a/static/base.css
+++ b/static/base.css
@@ -171,7 +171,7 @@ span {
 }
 
 .previewStory {
-  background-image: url("../media/Github.png");
+  background-image: url("../media/mystory.png");
   z-index: 1000;
   background-size: cover;
   position: absolute;
