--- a/static/base.css
+++ b/static/base.css
@@ -1,13 +1,16 @@
+
+/* ########################################################################################## */
+
 html {
   height: 100%;
 }
 
 /* Name and surname */
 span {
-  position: absolute;
+  position: relative;
   margin: auto;
-  top: 115px;
-  left: 265px;
+  /* top: 115px;
+  left: 265px; */
 }
 
 /* Main container */
@@ -277,11 +280,6 @@ span {
       height: 100%;
       margin-left: 30px;
       font-size: 2.0rem;
-    }
-
-    span {
-      top: 100px;
-      left: 20px;
     }
 
     h1 {
